@@ -91,6 +91,7 @@ public class ParserTest extends TestCase {
 		failures.add("PreformattedInvalid1");
 		failures.add("Heading5");
 		failures.add("ImageLink2"); // bad paragraph parsing - no <p> around <div> tags
+		failures.add("ParserFunctions2"); // bad paragraph parsing around <nowiki> tags, failure of nested magic templates
 		return (failures.indexOf(fileName) != -1);
 	}
 
