@@ -1,0 +1,11 @@
+<!-- test usage and rendering of parser functions -->
+
+{{anchorencode: a_b 40% x y}}
+
+{{filepath: Dummy.gif}}
+
+{{fullurl: Test Topic}}
+
+{{localurl: Test Topic}}
+
+{{urlencode: a_b 40% x y}}
