@@ -5,3 +5,5 @@ props-initialized=true
 wiki-version=0.7.0
 file-dir-full-path=src/test/resources/data/files/
 file-dir-relative-path=/files/
+file-server-url=http\://example.com/
+server-url=http\://example.com/
